# hw-monitor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.css  App.jsx  App.tsx  error-test.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: battery.rs  config.rs  cpu.rs  cpu_utils.rs  disk.rs  gpu.rs  lib.rs  main.rs  memory.rs  network.rs  proc.rs  proc_icon.rs  sensors.rs  total_usages.rs
src-tauri/src/battery/: commands.rs  data.rs  mod.rs  sysfs.rs
src-tauri/src/config/: commands.rs  commands_new.rs
src-tauri/src/cpu/: commands.rs
src-tauri/src/disk/: commands.rs
src-tauri/src/gpu/: commands.rs  mod.rs
src-tauri/src/memory/: commands.rs
src-tauri/src/network/: commands.rs
src-tauri/src/proc/: commands.rs
src-tauri/src/sensors/: commands.rs
src-tauri/src/services/: commands.rs
src-tauri/src/total_usages/: commands.rs
src-tauri/tests/: battery_tests.rs  config_tests.rs  cpu_tests.rs  cpu_utils_tests.rs  gpu_tests.rs  memory_tests.rs  network_tests.rs  proc_icon_tests.rs  proc_tests.rs
src/components/: Battery.tsx  BiGraph.tsx  Config.tsx  Cpu.jsx  Cpu.tsx  Disks.jsx  Disks.tsx  Graph.tsx  LineChart.jsx  Memory.jsx  Memory.tsx  Navbar.jsx  Navbar.tsx  Network.tsx  NetworkGraph.tsx  Performance.jsx  Performance.tsx  Proc.jsx  Proc.tsx  Sensors.jsx  Sensors.tsx  Sidebar.jsx  Sidebar.tsx
src/helper/: useDataConverter.tsx
src/helpers/: configHelpers.ts  useDataConverter.tsx
src/i18n/: i18n.ts
(+101 files in other folders)
