[package]
name = "hw-monitor"
version = "1.0.0"
description = "Hardware Monitor"
authors = ["husseinhareb"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
libc = "0.2"
base64 = "0.22"
nvml-wrapper = "0.10.0"
